# pydelt

./: README.md  paper_latex.aux  paper_latex.out  pyproject.toml
docs/: examples.rst  index.rst  quickstart.rst
local/comparisons/: Makefile  PAPER_REVISIONS_SUMMARY.md  README.md  compare_all_interpolators.py  compare_findiff.py  compare_jax.py  compare_numdifftools.py  compare_scipy.py  compile_latex.sh  generate_comparison_plots.py  paper_conclusions.md  paper_condensed.md  paper_enhanced.md  paper_latex.aux  paper_latex.out  paper_latex.tex  paper_pydelt.aux  paper_pydelt.out  paper_pydelt.tex  references.bib  research_draft_review_ready.aux  research_draft_review_ready.bbl  research_draft_review_ready.blg  research_draft_review_ready.out  research_draft_review_ready.tex  research_draft_review_ready.toc
local/output/: method_comparison_summary.csv  method_comparison_summary.html
local/research/: advanced_concepts.aux  advanced_concepts.out  advanced_concepts.tex  local_regression_methods.aux  local_regression_methods.out  local_regression_methods.tex  research_paper.aux  research_paper.out  research_paper.tex  research_summary.aux  research_summary.out  research_summary.tex  research_summary.toc  visual_testing_procedure.aux  visual_testing_procedure.out  visual_testing_procedure.tex
local/tests/: VISUAL_TEST_INTERPRETATION_GUIDE.md  debug_gradient_corners.py  run_visual_tests.py  test_multivariate_visual.py  test_tensor_derivatives_visual.py  test_universal_differentiation_visual.py  test_visual_autodiff.py  test_visual_interpolation.py  (+2 more)
(+60 files in other folders)
