[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "timeseries_derivatives"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "Time series smoothing and derivative methods"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "plotly>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/timeseries_derivatives"
"Bug Tracker" = "https://github.com/yourusername/timeseries_derivatives/issues"
